{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 78,
  "lineage": "74bf03e3-8da9-c0ac-5ff6-cc55a34d499d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "javawebapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05a36e1502605b4aa",
            "arn": "arn:aws:ec2:us-east-2:270517721595:instance/i-0459f6220c72d5af7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0459f6220c72d5af7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "kiki",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0447a6a7bb2c7dd6e",
            "private_dns": "ip-10-0-1-20.us-east-2.compute.internal",
            "private_ip": "10.0.1.20",
            "public_dns": "ec2-18-221-57-174.us-east-2.compute.amazonaws.com",
            "public_ip": "18.221.57.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c896ee1d0f2dad49",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09464a64ab5396c6a",
            "tags": {
              "Name": "javawebapp"
            },
            "tags_all": {
              "Name": "javawebapp"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0613270e97a6a8ac7"
            ]
          },
          "dependencies": [
            "aws_security_group.javawebapp-sg",
            "aws_subnet.javawebapp-public-subnet",
            "aws_vpc.javawebapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05a36e1502605b4aa",
            "arn": "arn:aws:ec2:us-east-2:270517721595:instance/i-00e2e016a24f3f800",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e2e016a24f3f800",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kiki",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f3a4f41329caf46b",
            "private_dns": "ip-10-0-1-12.us-east-2.compute.internal",
            "private_ip": "10.0.1.12",
            "public_dns": "ec2-3-17-187-121.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.187.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b1c13578d07e8966",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09464a64ab5396c6a",
            "tags": {
              "Name": "jenkins"
            },
            "tags_all": {
              "Name": "jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0613270e97a6a8ac7"
            ]
          },
          "dependencies": [
            "aws_security_group.javawebapp-sg",
            "aws_subnet.javawebapp-public-subnet",
            "aws_vpc.javawebapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05a36e1502605b4aa",
            "arn": "arn:aws:ec2:us-east-2:270517721595:instance/i-0c50ddfa56d8d6f5c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c50ddfa56d8d6f5c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kiki",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f53dc97bc0fdc777",
            "private_dns": "ip-10-0-1-11.us-east-2.compute.internal",
            "private_ip": "10.0.1.11",
            "public_dns": "ec2-18-227-26-19.us-east-2.compute.amazonaws.com",
            "public_ip": "18.227.26.19",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-076f92491cfe11551",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09464a64ab5396c6a",
            "tags": {
              "Name": "tomcat"
            },
            "tags_all": {
              "Name": "tomcat"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0613270e97a6a8ac7"
            ]
          },
          "dependencies": [
            "aws_security_group.javawebapp-sg",
            "aws_subnet.javawebapp-public-subnet",
            "aws_vpc.javawebapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "javaweb-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:270517721595:internet-gateway/igw-0d8d2c8833baf1e60",
            "id": "igw-0d8d2c8833baf1e60",
            "owner_id": "270517721595",
            "tags": {
              "Name": "Javawebapp igw"
            },
            "tags_all": {
              "Name": "Javawebapp igw"
            },
            "vpc_id": "vpc-0cd83568dc357f2f3"
          },
          "dependencies": [
            "aws_vpc.javawebapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "javawebapp-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d8d2c8833baf1e60",
            "id": "r-rtb-032b32862ef9c8f331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-032b32862ef9c8f33",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.javaweb-igw",
            "aws_route_table.javawebapp-public-route-table",
            "aws_vpc.javawebapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "javawebapp-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:270517721595:route-table/rtb-04a862ab84ca37c4e",
            "id": "rtb-04a862ab84ca37c4e",
            "owner_id": "270517721595",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Javawebapp private route table"
            },
            "tags_all": {
              "Name": "Javawebapp private route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd83568dc357f2f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.javawebapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "javawebapp-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:270517721595:route-table/rtb-032b32862ef9c8f33",
            "id": "rtb-032b32862ef9c8f33",
            "owner_id": "270517721595",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Javawebapp public route table"
            },
            "tags_all": {
              "Name": "Javawebapp public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd83568dc357f2f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.javawebapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "javawebapp-private-route-table-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0957f3a3d5d665347",
            "route_table_id": "rtb-04a862ab84ca37c4e",
            "subnet_id": "subnet-02e4b0b5d7b408669"
          },
          "dependencies": [
            "aws_route_table.javawebapp-private-route-table",
            "aws_subnet.javawebapp-private-subnet",
            "aws_vpc.javawebapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "javawebapp-public-route-table-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056921340bc064fec",
            "route_table_id": "rtb-032b32862ef9c8f33",
            "subnet_id": "subnet-09464a64ab5396c6a"
          },
          "dependencies": [
            "aws_route_table.javawebapp-public-route-table",
            "aws_subnet.javawebapp-public-subnet",
            "aws_vpc.javawebapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "javaweb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:270517721595:security-group/sg-0dc78960c95bfc490",
            "description": "Allow SSH \u0026 HTTPD inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IP and Ports Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc78960c95bfc490",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPD from port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Javaweb SSH \u0026 HTTPD",
            "name_prefix": "",
            "owner_id": "270517721595",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "javaweb-SG"
            },
            "tags_all": {
              "Name": "javaweb-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd83568dc357f2f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.javawebapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "javawebapp-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:270517721595:security-group/sg-0613270e97a6a8ac7",
            "description": "Allow SSH \u0026 HTTPD inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IP and Ports Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0613270e97a6a8ac7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPD from port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "javawebapp SSH \u0026 HTTPD",
            "name_prefix": "",
            "owner_id": "270517721595",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "javawebapp-SG"
            },
            "tags_all": {
              "Name": "javawebapp-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd83568dc357f2f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.javawebapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "javawebapp-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:270517721595:subnet/subnet-02e4b0b5d7b408669",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e4b0b5d7b408669",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "270517721595",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Javawebapp private subnet"
            },
            "tags_all": {
              "Name": "Javawebapp private subnet"
            },
            "vpc_id": "vpc-0cd83568dc357f2f3"
          },
          "dependencies": [
            "aws_vpc.javawebapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "javawebapp-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:270517721595:subnet/subnet-09464a64ab5396c6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09464a64ab5396c6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "270517721595",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Javawebapp public subnet"
            },
            "tags_all": {
              "Name": "Javawebapp public subnet"
            },
            "vpc_id": "vpc-0cd83568dc357f2f3"
          },
          "dependencies": [
            "aws_vpc.javawebapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "javawebapp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:270517721595:vpc/vpc-0cd83568dc357f2f3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cd95c051ac872a02",
            "default_route_table_id": "rtb-0b800ba36115a3629",
            "default_security_group_id": "sg-08fd6435d88a2fe26",
            "dhcp_options_id": "dopt-0f4cad319baf2b9df",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cd83568dc357f2f3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b800ba36115a3629",
            "owner_id": "270517721595",
            "tags": {
              "Name": "Javawebapp vpc"
            },
            "tags_all": {
              "Name": "Javawebapp vpc"
            }
          }
        }
      ]
    }
  ]
}